--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -165,3 +165,7 @@
     <option value="5">5 (Strongly Agree)</option>
 </select>
 <hr>
+
+<button type="submit" class="btn btn-warning btn-lg " id="submit"><i class="fa fa-check-circle" aria-hidden="true"></i>
+    Submit</button>
+</form>
